[package]
name = "v0k"
version = "0.1.7"
edition = "2021"
description = "A semantic-level intelligent CLI agent for developers"
license = "MIT"

[[bin]]
name = "v0k"
path = "src/main.rs"

[dependencies]
clap = { version = "4", features = ["derive"] }
tokio = { version = "1", features = ["process", "rt-multi-thread", "macros", "io-util"] }
reqwest = { version = "0.12", features = ["json", "rustls-tls"], default-features = false }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
toml = "0.8"
dirs = "6"
regex = "1"
rpassword = "7.4.0"
colored = "3.1.1"
which = "8.0.2"

[dev-dependencies]
serial_test = "3"
crossbeam-channel = "0.5"
